# duang

./: .gitignore  Cargo.toml  README.md
demo-duang/: Cargo.toml
demo-duang/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
tests/: all-optional-arg.rs  call.rs  default-hygiene.rs  error-call-missing-assign.rs  error-call-missing-assign.stderr  error-call-parameter-order.rs  error-call-parameter-order.stderr  error-call-repeat-assign.rs  error-call-repeat-assign.stderr  error-default-hygiene.rs  error-default-hygiene.stderr  error-impl-parameter-order.rs  error-impl-parameter-order.stderr  error-not-captured-parameter-self.rs  error-not-captured-parameter-self.stderr  error-only-type-provided-for-mandatory.rs  error-only-type-provided-for-mandatory.stderr  error-wildchar.rs  error-wildchar.stderr  old-function-remain-intact.rs  parse.rs  pattern-argument.rs  progress.rs  right.rs  support-impl-arg.rs  type-notation.rs
